--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 kubernetes==32.0.1
 langchain==0.3.20
-langchain-community==0.0.12
+langchain-community
 langchain-core==0.3.43
 langchain-openai==0.3.8
 langchain-text-splitters==0.3.6
